--- a/storyCreator/story_creator.css
+++ b/storyCreator/story_creator.css
@@ -1,5 +1,9 @@
 html{overflow-y: auto}
 
+body{
+background-color:#525252;
+}
+
 .animationContainer{
 width:800px;
 height:400px;
@@ -15,6 +19,7 @@ height:600px;
 border:solid; 
 position: fixed;
 top:40px;
+background-color:#20cfd0;
 }
 
 .objectContainer{
@@ -23,19 +28,17 @@ height:400px;
 border:solid;
 position:fixed;
 top:450px;
-
+background-color:#20cfd0;
 }
 
 .vertical-scroll{
 height:300px;
-
-
 }
+
+
 
 
 #buttons{
 float:right;
 position:fixed;
-
-
 }
