--- a/storyCreator/story_creator.css
+++ b/storyCreator/story_creator.css
@@ -33,3 +33,15 @@ background-color:#20cfd0;
 float:right;
 position:fixed;
 }
+
+
+.draggable {
+	float:right;
+}
+
+#tabs {
+	top: 0px;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
