--- a/storyCreator/story_creator.css
+++ b/storyCreator/story_creator.css
@@ -4,6 +4,13 @@ body{
 background-color:#525252;
 }
 
+#logo{
+	position: absolute;
+	float: left;
+	width: 30%;
+	top:1%;
+}
+
 .buttons{
 	position: absolute;
 }
@@ -13,7 +20,7 @@ border:solid;
 border-width: 2px;
 border-color: #242928;
 position:absolute;
-top:7%;
+top:17%;
 }
 
 .objectContainer{
@@ -24,7 +31,7 @@ box-shadow: 3px 3px 10px #1b1b1b;
 float: left;
 border-radius: 5px;
 position:absolute;
-top:67%;
+top:77%;
 background-color:#838383;
 }
 
@@ -36,13 +43,14 @@ border-color: #242928;
 box-shadow: 3px 3px 10px #1b1b1b;
 border-radius: 5px;
 position: absolute;
-top:7%;
+top:17%;
 background-color:#838383;
 }
 
-#buttons{
-float:right;
-position:fixed;
+.buttons{
+top: 10%;
+left:18%;
+position:absolute;
 }
 
 
@@ -53,6 +61,6 @@ position:fixed;
 #tabs {
 	top: 0px;
 	position: absolute;
-	width: 100%;
-	height: 100%;
+	width: 99.5%;
+	height: 99.5%;
 }
