--- a/storyCreator/story_creator.css
+++ b/storyCreator/story_creator.css
@@ -1,7 +1,19 @@
-html>body {overflow:scroll; }
-
+/*html>body {overflow:scroll; }*/
+html{
+	 height: 100%;
+}
 body{
-background-color:#525252;
+	background: -moz-linear-gradient(top, #565b5e 3%, #0a0e0f 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(3%,#565b5e), color-stop(100%,#0a0e0f)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #565b5e 3%,#0a0e0f 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #565b5e 3%,#0a0e0f 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #565b5e 3%,#0a0e0f 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #565b5e 3%,#0a0e0f 100%); /* W3C */
+	height: 100%;
+	margin:0;
+	padding: 0;
+	width: auto;
+	background-attachment: fixed;
 }
 
 #logo{
@@ -9,6 +21,7 @@ background-color:#525252;
 	float: left;
 	width: 30%;
 	top:1%;
+	left:1%;
 }
 
 .animationContainer{
@@ -24,7 +37,7 @@ border:solid;
 border-width: 2px;
 border-color: #242928;
 box-shadow: 3px 3px 10px #1b1b1b;
-float: left;
+/*float: left;*/
 border-radius: 5px;
 position:absolute;
 top:77%;
@@ -32,6 +45,12 @@ background-color:#838383;
 }
 
 .VEContainer{
+background: -moz-linear-gradient(top, #ffffff 0%, #d7e0e0 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#d7e0e0)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, #ffffff 0%,#d7e0e0 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, #ffffff 0%,#d7e0e0 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, #ffffff 0%,#d7e0e0 100%); /* IE10+ */
+background: linear-gradient(to bottom, #ffffff 0%,#d7e0e0 100%); /* W3C */
 left:58%;
 border:solid; 
 border-width: 2px;
@@ -40,13 +59,13 @@ box-shadow: 3px 3px 10px #1b1b1b;
 border-radius: 5px;
 position: absolute;
 top:17%;
-background-color:#838383;
+
 }
 
 .buttons{
-top: 10%;
-left:18%;
-position:absolute;
+	top: 10%;
+	left:17%;
+	position:absolute;
 }
 
 
