--- a/story_integration2/story_creator.css
+++ b/story_integration2/story_creator.css
@@ -53,7 +53,6 @@ background: -webkit-linear-gradient(top, #ffffff 0%,#d7e0e0 100%); /* Chrome10+,
 background: -o-linear-gradient(top, #ffffff 0%,#d7e0e0 100%); /* Opera 11.10+ */
 background: -ms-linear-gradient(top, #ffffff 0%,#d7e0e0 100%); /* IE10+ */
 background: linear-gradient(to bottom, #ffffff 0%,#d7e0e0 100%); /* W3C */
-overflow:scroll;
 left:58%;
 border:solid; 
 border-width: 2px;
@@ -62,6 +61,13 @@ box-shadow: 3px 3px 10px #1b1b1b;
 border-radius: 5px;
 position: absolute;
 top:17%;
+overflow: scroll;
+}
+
+#container{
+position: relative;
+ width: 300;
+ height: 500;
 
 }
 
@@ -117,8 +123,6 @@ top:17%;
 	position:relative;
 	top:1px;
 }
-
-
 
 .draggable {
 	float:right;
