Fixes object panel css background

--- a/Trunk/story_creator.css
+++ b/Trunk/story_creator.css
@@ -42,7 +42,7 @@ box-shadow: 3px 3px 10px #1b1b1b;
 border-radius: 5px;
 position:absolute;
 top:75%;
-background-color:#838383;
+background-color:"white";
 overflow: scroll;
 }
 
