--- a/story_integration2/registerstyle.css
+++ b/story_integration2/registerstyle.css
@@ -21,15 +21,16 @@ body{
 	font-weight:300;
 	text-align: left;
 	text-decoration: none;
+	height: 600px;
 }
 
 #logo{
 
 left:50%;
 top:40%;
-margin:-240px 0 0 -150px;
+margin:-260px 0 0 -150px;
 /*border:1px solid #000;*/
-position:absolute;
+position:fixed;
 }
 
 #bunny{
@@ -39,7 +40,7 @@ left:50%;
 top:50%;
 margin:-260px 0 0 -200px;
 /*border:1px solid #000;*/
-position:absolute;
+position:fixed;
 }
 
 #wrapper{	
@@ -48,7 +49,7 @@ position:absolute;
   	width: 350px;
 	height: 400px;
 	margin: -110px 0 0 -170px;
-	position:absolute;
+	position:fixed;
 }
 
 .login{
@@ -113,7 +114,7 @@ position:absolute;
 
 /* Second input field */
 .login .content .password, .login .content .pass-icon, .login .content .email {
-	margin-top: 15px;
+	margin-top: 25px;
 }
 
 .login .content .input:hover {
